--- a/README
+++ b/README
@@ -8,6 +8,16 @@ This is a ELK example on vagrant.
 
 # Execution
 	vagrant destroy -f && vagrant up
+	
+# Run
+	cd /home/vagrant
+	1. elasticsearch
+		bash startall.sh
+	2. kibana
+		$PROJ_DIR/kibana-4.4.1-linux-x64/bin/kibana > /dev/null 2>&1 &
+	3. logstash
+		$PROJ_DIR/logstash-2.2.2/bin/logstash -f $PROJ_DIR/logstash-2.2.2/log_list/nginx.conf &
+		$PROJ_DIR/logstash-2.2.2/bin/logstash -f $PROJ_DIR/logstash-2.2.2/log_list/test1.conf &
 
 # installed applications
 	elasticsearch
