--- a/README
+++ b/README
@@ -5,6 +5,7 @@ This is a ELK example on vagrant.
 	-. install ELK and make 3 ES nodes.
 	-. configure logstash for json foramt log
 	-. test script for simple query
+	-. install all on AWS
 
 # Execution
 	vagrant destroy -f && vagrant up
@@ -50,4 +51,14 @@ This is a ELK example on vagrant.
 	- change the query period for test1 data
 		2017-02-21 00:00:00.000 ~ 2017-02-21 00:00:00.000
 	
+# install all on AWS
+``` 
+	git clone https://github.com/Sodacrew/SodaTransferELK.git
+	cd ~/SodaTransferELK/script
+	bash elk_aws.sh
 	
+	cd ~/SodaTransferELK/resources/elasticsearch
+	bash startall.sh # stopall.sh
+	
+	bash elk_aws.sh
+```
